// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxGroup /> snapshot should render the same 1`] = `
"Snapshot Diff:
 - Expected
+ Received

  <div
    className=\\"FieldGroup-sc-18uoi37-0 CheckboxGroup__Group-sc-1da60j6-0 bciUTo nTJFd\\"
  >
    <div
      className=\\"Checkbox__Wrapper-sc-1ca5whm-0\\"
    >
      <div
        className=\\"Checkbox__CheckboxWrapper-sc-1ca5whm-1 gzVUdr\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 Checkbox__HiddenCheckbox-sc-1ca5whm-4 dAMkUb jbbOOw\\"
          disabled={false}
          id=\\"\\"
          name=\\"Foo\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
        <svg
          aria-hidden={true}
          className=\\"MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3\\"
          data-qtm-preloader=\\"icon\\"
          focusable=\\"false\\"
          style={
            Object {
              \\"color\\": \\"\\",
              \\"fontSize\\": 24,
              \\"maxWidth\\": 24,
            }
          }
          viewBox=\\"0 0 24 24\\"
        >
          <path
            d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\"
          />
        </svg>
        <label
          className=\\"Label-sc-1ny5bqy-0 Checkbox__CheckboxLabel-sc-1ca5whm-2 duEDAR gaSCQH\\"
          htmlFor=\\"\\"
        >
-         Foo label
+         Foo
        </label>
      </div>
    </div>
    <div
      className=\\"Checkbox__Wrapper-sc-1ca5whm-0\\"
    >
      <div
        className=\\"Checkbox__CheckboxWrapper-sc-1ca5whm-1 gzVUdr\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 Checkbox__HiddenCheckbox-sc-1ca5whm-4 dAMkUb jbbOOw\\"
          disabled={false}
          id=\\"\\"
          name=\\"Bar\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
        <svg
          aria-hidden={true}
          className=\\"MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3\\"
          data-qtm-preloader=\\"icon\\"
          focusable=\\"false\\"
          style={
            Object {
              \\"color\\": \\"\\",
              \\"fontSize\\": 24,
              \\"maxWidth\\": 24,
            }
          }
          viewBox=\\"0 0 24 24\\"
        >
          <path
            d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\"
          />
        </svg>
        <label
          className=\\"Label-sc-1ny5bqy-0 Checkbox__CheckboxLabel-sc-1ca5whm-2 duEDAR gaSCQH\\"
          htmlFor=\\"\\"
        >
-         Bar label
+         Bar
        </label>
      </div>
    </div>
    <div
      className=\\"Checkbox__Wrapper-sc-1ca5whm-0\\"
    >
      <div
        className=\\"Checkbox__CheckboxWrapper-sc-1ca5whm-1 gzVUdr\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 Checkbox__HiddenCheckbox-sc-1ca5whm-4 dAMkUb jbbOOw\\"
          disabled={false}
          id=\\"\\"
          name=\\"Baz\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
        <svg
          aria-hidden={true}
          className=\\"MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3\\"
          data-qtm-preloader=\\"icon\\"
          focusable=\\"false\\"
          style={
            Object {
              \\"color\\": \\"\\",
              \\"fontSize\\": 24,
              \\"maxWidth\\": 24,
            }
          }
          viewBox=\\"0 0 24 24\\"
        >
          <path
            d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\"
          />
        </svg>
        <label
          className=\\"Label-sc-1ny5bqy-0 Checkbox__CheckboxLabel-sc-1ca5whm-2 duEDAR gaSCQH\\"
          htmlFor=\\"\\"
        >
-         Baz label
+         Baz
        </label>
      </div>
    </div>
  </div>"
`;

exports[`<CheckboxGroup /> snapshot should render the same, when using buttons 1`] = `
"Snapshot Diff:
 - Expected
+ Received

  <div
    className=\\"FieldGroup-sc-18uoi37-0 CheckboxGroup__Group-sc-1da60j6-0 bciUTo nTJFd\\"
  >
    <div
      className=\\"CheckboxButton__Wrapper-sc-1rvg70v-2 dHjBBA\\"
    >
      <label
        checked={false}
        className=\\"CheckboxButton__CheckButton-sc-1rvg70v-3 eFlpEz\\"
        disabled={false}
-       htmlFor=\\"checkbox-button-12\\"
+       htmlFor=\\"checkbox-button-15\\"
        size=\\"medium\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 dAMkUb\\"
          disabled={false}
-         id=\\"checkbox-button-12\\"
+         id=\\"checkbox-button-15\\"
          name=\\"Foo\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
-       Foo label
+       Foo
      </label>
    </div>
    <div
      className=\\"CheckboxButton__Wrapper-sc-1rvg70v-2 dHjBBA\\"
    >
      <label
        checked={false}
        className=\\"CheckboxButton__CheckButton-sc-1rvg70v-3 eFlpEz\\"
        disabled={false}
-       htmlFor=\\"checkbox-button-13\\"
+       htmlFor=\\"checkbox-button-16\\"
        size=\\"medium\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 dAMkUb\\"
          disabled={false}
-         id=\\"checkbox-button-13\\"
+         id=\\"checkbox-button-16\\"
          name=\\"Bar\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
-       Bar label
+       Bar
      </label>
    </div>
    <div
      className=\\"CheckboxButton__Wrapper-sc-1rvg70v-2 dHjBBA\\"
    >
      <label
        checked={false}
        className=\\"CheckboxButton__CheckButton-sc-1rvg70v-3 eFlpEz\\"
        disabled={false}
-       htmlFor=\\"checkbox-button-14\\"
+       htmlFor=\\"checkbox-button-17\\"
        size=\\"medium\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 dAMkUb\\"
          disabled={false}
-         id=\\"checkbox-button-14\\"
+         id=\\"checkbox-button-17\\"
          name=\\"Baz\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
-       Baz label
+       Baz
      </label>
    </div>
  </div>"
`;

exports[`<CheckboxGroup /> snapshot simple with <CheckboxGroup.Button /> 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  position: relative;
}

<div
  className="c0 c1"
>
  <div
    className=""
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-3"
      size="medium"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c3"
        disabled={false}
        id="checkbox-button-3"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-4"
      size="medium"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c3"
        disabled={false}
        id="checkbox-button-4"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-5"
      size="medium"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c3"
        disabled={false}
        id="checkbox-button-5"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot simple with <CheckboxGroup.Checkbox /> 1`] = `
.c6 {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c7 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c4 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c4[disabled] {
  cursor: not-allowed;
}

.c4[disabled] ~ .c5 {
  color: #999999;
}

.c1 {
  position: relative;
}

<div
  className="c0 c1"
>
  <div
    className="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      className="c2"
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        id=""
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="c5 c6 c7"
        htmlFor=""
      >
        Foo
      </label>
    </div>
  </div>
  <div
    className="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      className="c2"
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        id=""
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="c5 c6 c7"
        htmlFor=""
      >
        Bar
      </label>
    </div>
  </div>
  <div
    className="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      className="c2"
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        id=""
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="c5 c6 c7"
        htmlFor=""
      >
        Baz
      </label>
    </div>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot simple with options 1`] = `
.c6 {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c7 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c4 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c4[disabled] {
  cursor: not-allowed;
}

.c4[disabled] ~ .c5 {
  color: #999999;
}

.c1 {
  position: relative;
}

<div
  className="c0 c1"
>
  <div
    className="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      className="c2"
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        id=""
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="c5 c6 c7"
        htmlFor=""
      >
        Foo
      </label>
    </div>
  </div>
  <div
    className="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      className="c2"
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        id=""
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="c5 c6 c7"
        htmlFor=""
      >
        Bar
      </label>
    </div>
  </div>
  <div
    className="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      className="c2"
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        id=""
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="c5 c6 c7"
        htmlFor=""
      >
        Baz
      </label>
    </div>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot simple with options and type prop as "button" 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  position: relative;
}

<div
  className="c0 c1"
>
  <div
    className=""
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-0"
      size="medium"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c3"
        disabled={false}
        id="checkbox-button-0"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-1"
      size="medium"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c3"
        disabled={false}
        id="checkbox-button-1"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-2"
      size="medium"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c3"
        disabled={false}
        id="checkbox-button-2"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Button /> and icons 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  position: relative;
}

<div
  className="c0 c1"
>
  <div
    className=""
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-18"
      size="medium"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c3"
        disabled={false}
        id="checkbox-button-18"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-19"
      size="medium"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c3"
        disabled={false}
        id="checkbox-button-19"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-20"
      size="medium"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c3"
        disabled={false}
        id="checkbox-button-20"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Button /> with an error 1`] = `
.c4 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  position: relative;
}

<div
  className="c0 c1"
>
  <div
    className=""
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-6"
      size="medium"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c3"
        disabled={false}
        id="checkbox-button-6"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-7"
      size="medium"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c3"
        disabled={false}
        id="checkbox-button-7"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-8"
      size="medium"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c3"
        disabled={false}
        id="checkbox-button-8"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
    </label>
  </div>
  <span
    className="c4"
  >
    Error Message
  </span>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Button /> with disabled options 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  position: relative;
}

<div
  className="c0 c1"
>
  <div
    className=""
  >
    <label
      checked={false}
      className="c2"
      disabled={true}
      htmlFor="checkbox-button-9"
      size="medium"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c3"
        disabled={true}
        id="checkbox-button-9"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root CheckboxButton__LockIcon-sc-1rvg70v-1"
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
        />
      </svg>
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-10"
      size="medium"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c3"
        disabled={false}
        id="checkbox-button-10"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={true}
      className="c2"
      disabled={true}
      htmlFor="checkbox-button-11"
      size="medium"
    >
      <input
        checked={true}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c3"
        disabled={true}
        id="checkbox-button-11"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root CheckboxButton__LockIcon-sc-1rvg70v-1"
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
        />
      </svg>
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Checkbox /> with an error 1`] = `
.c8 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c6 {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c7 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c4 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c4[disabled] {
  cursor: not-allowed;
}

.c4[disabled] ~ .c5 {
  color: #999999;
}

.c1 {
  position: relative;
}

<div
  className="c0 c1"
>
  <div
    className="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      className="c2"
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        id=""
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="c5 c6 c7"
        htmlFor=""
      >
        Foo
      </label>
    </div>
  </div>
  <div
    className="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      className="c2"
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        id=""
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="c5 c6 c7"
        htmlFor=""
      >
        Bar
      </label>
    </div>
  </div>
  <div
    className="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      className="c2"
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        id=""
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="c5 c6 c7"
        htmlFor=""
      >
        Baz
      </label>
    </div>
  </div>
  <span
    className="c8"
  >
    Error Message
  </span>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Checkbox /> with disabled options 1`] = `
.c6 {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c7 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c4 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c4[disabled] {
  cursor: not-allowed;
}

.c4[disabled] ~ .c5 {
  color: #999999;
}

.c1 {
  position: relative;
}

<div
  className="c0 c1"
>
  <div
    className="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      className="c2"
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={true}
        id=""
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="c5 c6 c7"
        htmlFor=""
      >
        Foo
      </label>
    </div>
  </div>
  <div
    className="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      className="c2"
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        id=""
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="c5 c6 c7"
        htmlFor=""
      >
        Bar
      </label>
    </div>
  </div>
  <div
    className="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      className="c2"
    >
      <input
        checked={true}
        className="c3 c4"
        disabled={true}
        id=""
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="c5 c6 c7"
        htmlFor=""
      >
        Baz
      </label>
    </div>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with inline <CheckboxGroup.Button /> 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c4 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  display: inline-block;
  margin-right: 16px;
  vertical-align: top;
}

.c2:last-child {
  margin-right: 0;
}

.c3 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  position: relative;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <label
      checked={false}
      className="c3"
      disabled={false}
      htmlFor="checkbox-button-21"
      size="medium"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c4"
        disabled={false}
        id="checkbox-button-21"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
    </label>
  </div>
  <div
    className="c2"
  >
    <label
      checked={false}
      className="c3"
      disabled={false}
      htmlFor="checkbox-button-22"
      size="medium"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c4"
        disabled={false}
        id="checkbox-button-22"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className="c2"
  >
    <label
      checked={false}
      className="c3"
      disabled={false}
      htmlFor="checkbox-button-23"
      size="medium"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c4"
        disabled={false}
        id="checkbox-button-23"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with size <CheckboxGroup.Button /> 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  position: relative;
}

<div
  className="c0 c1"
>
  <div
    className=""
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-24"
      size="large"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c3"
        disabled={false}
        id="checkbox-button-24"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-25"
      size="large"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c3"
        disabled={false}
        id="checkbox-button-25"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-26"
      size="large"
    >
      <input
        checked={false}
        className="CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 c3"
        disabled={false}
        id="checkbox-button-26"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
    </label>
  </div>
</div>
`;
